--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 httpx>=0.28.1
 mcp[cli]>=1.5.0
+pydantic>=2.0.0
+
+# Web framework for streamable HTTP
+fastapi>=0.110.0
+uvicorn[standard]>=0.30.0
+sse-starlette>=1.6.5
