--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ httpx>=0.28.1
 mcp[cli]>=1.5.0
 pydantic>=2.0.0
 
-# Web framework for streamable HTTP
+# Web framework dependencies for HTTP/SSE transport
 fastapi>=0.110.0
 uvicorn[standard]>=0.30.0
 sse-starlette>=1.6.5
+starlette>=0.37.0
