--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ fastapi>=0.110.0
 uvicorn[standard]>=0.30.0
 sse-starlette>=1.6.5
 starlette>=0.37.0
+fastmcp>=2.11.0  # Minimum version with auth support
